# API_CERTIFY

./: pyproject.toml
api_certify/: main.py
api_certify/routes/v1/: upload_routes.py
api_certify/service/: upload_service.py
tests/: test_upload.py
